--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -2445,8 +2445,7 @@
    "source": [
     "def multivariable_output_at(list_of_terms, x_value, y_value):\n",
     "    output = []\n",
-    "    for term in list_of_terms:\n",
-    "        cons"
+    "    for term in list_of_terms"
    ]
   },
   {
