--- a/index.ipynb
+++ b/index.ipynb
@@ -2439,7 +2439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2449,7 +2449,7 @@
     "        constant = term[0]\n",
     "        x_exponent = term[1]\n",
     "        y_exponent = term[2]\n",
-    "        term_output = constant*x_value*"
+    "        term_output = constant*x_value*y"
    ]
   },
   {
